--- a/feeproject.html
+++ b/feeproject.html
@@ -29,7 +29,7 @@
           <h1 class = "banner-title">
             <span>Web </span> Blog
           </h1>
-          <p>everything that you want to know about blogs</p>
+          <p>I think u have to know about blogs</p>
           <form>
             <input type = "text" class = "search-input" placeholder="find your blog . . .">
             <button type = "submit" class = "search-btn">
