--- a/feeproject.html
+++ b/feeproject.html
@@ -195,7 +195,7 @@
             </div>
             <div class = "blog-text">
               
-              <h2>"Mastering Your Finances: A Journey to Financial Freedom"</h2>
+              <<h3>"Mastering Your Finances: A Journey to Financial Freedom"</h3>
               <p>Money, in all its forms, plays an essential role in our lives. Whether we like it or not, financial matters touch nearly every aspect of our existence. From paying bills and securing our future to indulging in our passions and dreams, money is the key that unlocks the doors to countless possibilities. Join us as we embark on a journey to demystify money, explore strategies for financial success, and discover the true value of wealth.</p>
               <a href = "#">Read More</a>
             </div>
